# PUE_GruppeA

./: .gitignore  README.md  pyproject.toml
src/: load_data.py  power_curve.py  sort.py
